# eventdelegatecpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cpp.hint  eventdelegatecpp.sln  internal.doxyfile
cmake/: eventdelegateOptions.cmake  eventdelegatecppConfig.cmake  libc++.cmake
include/: CallBackWrapper.h  Delegate - Copy.h  Delegate.h  Event.h  ICallBackWrapper.h  IDelegateSharedWrapper.h  IntermediateMemberWrapper.h  MethodWrapper.h  ed_base.h  ed_traits.h  event_concepts.h  event_delegate.h  first_try.h  package.h
include/senders/: default_sender.h
include/util/: compiler.h  ed.h  ed_defs.h  environment.h  forward.h  forward_decl.h  messages.h
lib/: lib.cpp  lib.vcxproj  lib.vcxproj.filters  pch.cpp
lib/x64/Debug/lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lib.lastbuildstate
sandbox/: CMakeLists.txt  main.cpp
snippets/: snippet.xml
snippets/Visual C++/: file.snippet
source/: default_sender.cpp  delegate.cpp  event_delegate.cpp
test/include/: TestFixtureFunctionType.h  test_functions.h
test/include/util/: ghelper.h  unit_test.h
test/source/tests/: ConceptsUnitGTest.cpp  DelegateUnitGTest.cpp  EDOUnitGTest.cpp  EDUnitGTest.cpp  IntermediateMemberWrapperGTest.cpp  SubscriptionTest.cpp  WildWestUnitGTest.cpp
test/source/util/: test_functions.cpp
x64/Debug/: lib.idb
